[gd_scene load_steps=23 format=3 uid="uid://dg2dljfus8ij1"]

[ext_resource type="Script" uid="uid://bt0tap08gwreq" path="res://scenes/board/ui/ui.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://5bep6mdci41m" path="res://scenes/ui/radial/radial.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://giqrbrkatdg4" path="res://scenes/ui/board/coin_view.tscn" id="3"]
[ext_resource type="Theme" path="res://assets/gui/ui_theme.tres" id="4"]
[ext_resource type="PackedScene" uid="uid://k2hh8e6861ja" path="res://scenes/map_editor/tile_view.tscn" id="5"]
[ext_resource type="FontFile" uid="uid://dkpcsi5rudp7j" path="res://assets/fonts/ttf/courier.ttf" id="5_m22p8"]
[ext_resource type="PackedScene" uid="uid://dt37ijplfqjd5" path="res://scenes/ui/board/summary_view.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://bi4blrx7exbvc" path="res://scenes/ui/board/end_turn.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://botr5y82s8y8r" path="res://scenes/ui/board/start_turn.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://dd78km24j4hpk" path="res://scenes/ui/board/story_dialog.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://cq83jcig537yk" path="res://scenes/ui/board/end_turn_confirm.tscn" id="9_70tj2"]
[ext_resource type="PackedScene" uid="uid://pwpr1qj108ke" path="res://scenes/ui/board/cinematic_bars.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://b6leaqbp4x4wb" path="res://scenes/ui/icons/star.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://bfj36q6npgot2" path="res://scenes/ui/board/unit_stats.tscn" id="12"]
[ext_resource type="Texture2D" uid="uid://biu2u7rf4o1vh" path="res://assets/gui/editor/circle.png" id="13"]
[ext_resource type="PackedScene" uid="uid://cxyvigb7jv67r" path="res://scenes/ui/board/objectives.tscn" id="15"]
[ext_resource type="PackedScene" uid="uid://0bbskwqb2iu4" path="res://scenes/ui/board/ap_depleted.tscn" id="16"]
[ext_resource type="PackedScene" uid="uid://4fm2h6kocq46" path="res://scenes/ui/save/saves.tscn" id="17"]
[ext_resource type="PackedScene" uid="uid://crv1ageml0d4g" path="res://scenes/ui/menu/controls/game.tscn" id="18"]
[ext_resource type="PackedScene" uid="uid://b6crhl6g0ory" path="res://scenes/ui/menu/settings/settings.tscn" id="19_xcys2"]
[ext_resource type="PackedScene" uid="uid://ce08h2jnhhsh4" path="res://scenes/ui/board/hover_menu.tscn" id="20_f08si"]
[ext_resource type="PackedScene" uid="uid://dpv3yr6wjfwey" path="res://scenes/ui/board/turn_time.tscn" id="22_5syy3"]

[node name="ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.529724
offset_right = -0.529785
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("4")
script = ExtResource("1")

[node name="resources" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 70.0
offset_right = 60.0
offset_bottom = 70.0

[node name="coin_view" parent="resources" instance=ExtResource("3")]

[node name="label" type="Label" parent="resources/coin_view"]
offset_left = -30.0
offset_top = -27.0
offset_right = 30.0
offset_bottom = -7.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("5_m22p8")
theme_override_font_sizes/font_size = 30
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="tile_highlight" type="MarginContainer" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_bottom = -40.0

[node name="tile_view" parent="tile_highlight" instance=ExtResource("5")]
position = Vector2(60, -20)

[node name="hp" type="Label" parent="tile_highlight/tile_view"]
offset_left = -50.0
offset_top = 30.0
offset_right = 50.0
offset_bottom = 50.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("5_m22p8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="level1" type="Node2D" parent="tile_highlight"]
visible = false

[node name="star" parent="tile_highlight/level1" instance=ExtResource("11")]
position = Vector2(60, -70)

[node name="level2" type="Node2D" parent="tile_highlight"]
visible = false

[node name="star" parent="tile_highlight/level2" instance=ExtResource("11")]
position = Vector2(50, -70)

[node name="star2" parent="tile_highlight/level2" instance=ExtResource("11")]
position = Vector2(70, -70)

[node name="level3" type="Node2D" parent="tile_highlight"]
visible = false

[node name="star" parent="tile_highlight/level3" instance=ExtResource("11")]
position = Vector2(50, -65)

[node name="star2" parent="tile_highlight/level3" instance=ExtResource("11")]
position = Vector2(70, -65)

[node name="star3" parent="tile_highlight/level3" instance=ExtResource("11")]
position = Vector2(60, -80)

[node name="abilities" type="Node2D" parent="tile_highlight"]
position = Vector2(20, -20)

[node name="ab1" type="Node2D" parent="tile_highlight/abilities"]
visible = false
position = Vector2(120, 0)

[node name="bg" type="Sprite2D" parent="tile_highlight/abilities/ab1"]
position = Vector2(50, 0)
texture = ExtResource("13")

[node name="anchor" type="Node2D" parent="tile_highlight/abilities/ab1"]
position = Vector2(50, 0)

[node name="disabled" type="Sprite2D" parent="tile_highlight/abilities/ab1"]
visible = false
modulate = Color(1, 1, 1, 0.823529)
position = Vector2(50, 0)
texture = ExtResource("13")

[node name="cd" type="Label" parent="tile_highlight/abilities/ab1/disabled"]
offset_left = -100.0
offset_top = -95.0
offset_bottom = 5.0
scale = Vector2(2, 2)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_m22p8")
theme_override_font_sizes/font_size = 32
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="label" type="Label" parent="tile_highlight/abilities/ab1"]
offset_left = -25.0
offset_top = 10.0
offset_right = 125.0
offset_bottom = 60.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("5_m22p8")
text = "Heavy Weapon"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ab2" type="Node2D" parent="tile_highlight/abilities"]
visible = false
position = Vector2(260, 0)

[node name="bg" type="Sprite2D" parent="tile_highlight/abilities/ab2"]
position = Vector2(50, 0)
texture = ExtResource("13")

[node name="anchor" type="Node2D" parent="tile_highlight/abilities/ab2"]
position = Vector2(50, 0)

[node name="disabled" type="Sprite2D" parent="tile_highlight/abilities/ab2"]
visible = false
modulate = Color(1, 1, 1, 0.823529)
position = Vector2(50, 0)
texture = ExtResource("13")

[node name="cd" type="Label" parent="tile_highlight/abilities/ab2/disabled"]
offset_left = -100.0
offset_top = -95.0
offset_bottom = 5.0
scale = Vector2(2, 2)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_m22p8")
theme_override_font_sizes/font_size = 32
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="label" type="Label" parent="tile_highlight/abilities/ab2"]
offset_left = -25.0
offset_top = 10.0
offset_right = 125.0
offset_bottom = 60.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("5_m22p8")
text = "Heavy Weapon"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ab3" type="Node2D" parent="tile_highlight/abilities"]
visible = false
position = Vector2(400, 0)

[node name="bg" type="Sprite2D" parent="tile_highlight/abilities/ab3"]
position = Vector2(50, 0)
texture = ExtResource("13")

[node name="anchor" type="Node2D" parent="tile_highlight/abilities/ab3"]
position = Vector2(50, 0)

[node name="disabled" type="Sprite2D" parent="tile_highlight/abilities/ab3"]
visible = false
modulate = Color(1, 1, 1, 0.823529)
position = Vector2(50, 0)
texture = ExtResource("13")

[node name="cd" type="Label" parent="tile_highlight/abilities/ab3/disabled"]
offset_left = -100.0
offset_top = -95.0
offset_bottom = 5.0
scale = Vector2(2, 2)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_m22p8")
theme_override_font_sizes/font_size = 32
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="label" type="Label" parent="tile_highlight/abilities/ab3"]
offset_left = -25.0
offset_top = 10.0
offset_right = 125.0
offset_bottom = 60.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("5_m22p8")
text = "Heavy Weapon"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="end_turn" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="end_turn" parent="end_turn" instance=ExtResource("7")]
visible = false

[node name="start_turn" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="start_turn" parent="start_turn" instance=ExtResource("8")]

[node name="cinematic_bars" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="cinematic_bars" parent="cinematic_bars" instance=ExtResource("10")]
layout_mode = 2
mouse_filter = 2

[node name="objectives" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0

[node name="objectives" parent="objectives" instance=ExtResource("15")]
layout_mode = 2

[node name="ap_depleted" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="ap_depleted" parent="ap_depleted" instance=ExtResource("16")]

[node name="edge_pan" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="left" type="Control" parent="edge_pan"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 30.0
grow_vertical = 2
mouse_filter = 1

[node name="right" type="Control" parent="edge_pan"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -29.9999
offset_right = 0.00012207
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1

[node name="top" type="Control" parent="edge_pan"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 0.00012207
offset_bottom = 30.0
grow_horizontal = 2
mouse_filter = 1

[node name="bottom" type="Control" parent="edge_pan"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
offset_right = 0.00012207
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="unit_stats" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="unit_stats" parent="unit_stats" instance=ExtResource("12")]
visible = false

[node name="story_dialog" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 6.10352e-05
offset_top = -180.0
offset_right = 6.10352e-05
offset_bottom = -180.0

[node name="story_dialog" parent="story_dialog" instance=ExtResource("9")]
visible = false

[node name="end_turn_confirm" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="end_turn_confirm" parent="end_turn_confirm" instance=ExtResource("9_70tj2")]
visible = false

[node name="summary" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="summary_view" parent="summary" instance=ExtResource("6")]
visible = false

[node name="radial" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="radial" parent="radial" instance=ExtResource("2")]

[node name="saves" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="saves" parent="saves" instance=ExtResource("17")]

[node name="controls" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_bottom = 250.0
mouse_filter = 2

[node name="game" parent="controls" instance=ExtResource("18")]
visible = false
layout_mode = 2

[node name="settings" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="settings" parent="settings" instance=ExtResource("19_xcys2")]
layout_mode = 2

[node name="buttons" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -120.0
offset_right = 0.00012207
grow_horizontal = 0
grow_vertical = 0

[node name="hover_menu" parent="buttons" instance=ExtResource("20_f08si")]
layout_mode = 2

[node name="TurnTime" parent="." instance=ExtResource("22_5syy3")]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
offset_left = -59.9999
offset_top = -60.0
offset_right = -59.9999
offset_bottom = -60.0
grow_horizontal = 0
grow_vertical = 0
